--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WarFrame </title>
+<title>Playstation 4 </title>
 <style>
 * {box-sizing: border-box;}
 .cf:before, .cf:after { display: block; content: ''; clear: both; }
@@ -50,14 +50,14 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146738
     <div class="row-border"></div>
 
     <div class="row1 title">
-        <div class="container"><h1>Switch To WarFrame & Experience The Best Adrenaline Pumping Shooting Game, Brace Yourself!</h1>
+        <div class="container"><h1>Registrera idag gratis och vinn den bästa spelkonsolen, PlayStation4 + Fortnite spel !!</h1>
         </div>
     </div>
 
     <div class="row2 image">
         <div class="container">
             <div class="outter-border">
-                <img id="changeable_image" src='warframe.jpg' alt="Illustration">
+                <img id="changeable_image" src='fortnite.jpg' alt="Illustration">
             </div>
         </div>
     </div>
@@ -65,10 +65,10 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146738
     <div class="row3 list">
         <div class="container">
             <ul class="cf">
-                <li id="changeable_bullet1">Experience engaging and intense science-fiction multiplayer combat </li>
-                <li id="changeable_bullet2">The game looks amazing, thanks to quality graphics, effects, and sound design</li>
-                <li id="changeable_bullet3">Game content updated regularly to keep all players on their toes</li>
-                <li id="changeable_bullet4">Sign Up For Free and Interact with other players in the game</b></li>
+                <li id="changeable_bullet1">Playstation 4 är den mest sålda spelkonsolen i världen och är mycket kraftfull</li>
+                <li id="changeable_bullet2">Spelkonsol kraftfulla specifikationer bränslen fantastisk grafik, speleffekter och ljuddesign</li>
+                <li id="changeable_bullet3">Vinnare kommer också att få ett Fortnite-spel, det hetaste spelet i världen just nu</li>
+                <li id="changeable_bullet4">Registrera dig nu gratis och du kan äga din egen Playstation 4</b></li>
             </ul>
         </div>
     </div>
@@ -82,11 +82,11 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146738
     <div class="row5 text">
         <div class="container cf">
             <div class="col1">
-                <p id="changeable_description1"> The game is constantly changing as the community makes its needs known, and all signs point to it continuing to change for the better.
+                <p id="changeable_description1"> Tävlingen gäller för svenska invånare över 18 år. Nej under 18 år kommer att övervägas. Se till att all information som anges är korrekt eftersom du inte kan ändra den efter.
                 </p>
             </div>
             <div class="col2">
-                <p id="changeable_description2">Warframe is a fast-moving shooter that takes you zooming through space exploring spaceships, planets, and moons. Missions can be taken on alone or with others; either way, you earn resources and experience points (XP).
+                <p id="changeable_description2">Vinnarna kommer att få sina Playstation 4 + Fortnite via adressen under sign up. Vinnare kommer att kontaktas för att bekräfta sina uppgifter innan priset skickas.
                 </p>
             </div>
         </div>
