--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146738
 
     <div class="row4 button">
         <div class="container">
-            <a href="https://bfahp.bemobtrk.com/go/5b35c828-763c-4aaf-957d-779bdaf05d85" class="button" id="changeable_button">Sign up Now</a>
+            <a href="https://bfahp.bemobtrk.com/go/365d5c15-ba93-43c7-8022-46bf3fb8ae3b" class="button" id="changeable_button">ANMÄL DIG NU</a>
         </div>
     </div>
 
@@ -94,7 +94,7 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146738
 
     <div class="row6 copyright">
         <div class="container">
-            <p>Copyright &copy; 2018 - All Rights Reserved | <a href="https://bfahp.bemobtrk.com/go/5b35c828-763c-4aaf-957d-779bdaf05d85" target="_blank" style="color:#818080">Privacy and Terms</a></p>
+            <p>Copyright &copy; 2018 - All Rights Reserved | <a href="https://bfahp.bemobtrk.com/go/365d5c15-ba93-43c7-8022-46bf3fb8ae3b" target="_blank" style="color:#818080">Privacy and Terms</a></p>
         </div>
     </div>
 
